chore(devcontainer): update uv, cleanup config, and improve Claude Code install
- Update uv from 0.9.18 to 0.9.28
- Update Node.js version in docs from v22 to v24
- Change Claude Code installation to use official installer script
- Add ~/.local/bin to PATH in .zshrc for Claude Code
- Remove unused devcontainer.json settings (features, postCreateCommand, waitFor)
- Add cleanup step after Node.js installation
- Add .gitignore for common development files
- Add Claude Code to README pre-installed tools section

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,13 +29,15 @@ RUN adduser --disabled-password --gecos '' ${USERNAME}
 RUN echo "${USERNAME} ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/${USERNAME}
 
 # Install uv (Python will be installed and managed with uv)
-COPY --from=ghcr.io/astral-sh/uv:0.9.18 /uv /uvx /bin/
+COPY --from=ghcr.io/astral-sh/uv:0.9.28 /uv /uvx /bin/
 
 # Install Node.js
 ARG NODE_VERSION=24
 RUN wget -qO nodesource_setup.sh https://deb.nodesource.com/setup_${NODE_VERSION}.x && \
   bash nodesource_setup.sh && \
-  apt install -y nodejs
+  apt install -y nodejs && \
+  rm nodesource_setup.sh && \
+  apt clean && rm -rf /var/lib/apt/lists/*
 
 # Setup npm global packages directory for non-root user
 RUN mkdir -p /usr/local/share/npm-global && \
@@ -70,5 +72,5 @@ RUN sh -c "$(wget -O- https://github.com/deluan/zsh-in-docker/releases/download/
 ARG GEMINI_CLI_VERSION=latest
 RUN npm install -g @google/gemini-cli@${GEMINI_CLI_VERSION}
 
-ARG CLAUDE_CODE_VERSION=latest
-RUN npm install -g @anthropic-ai/claude-code@${CLAUDE_CODE_VERSION}
+# Install Claude Code
+RUN curl -fsSL https://claude.ai/install.sh | bash
